--- a/src/components/MainPage/MainPage.scss
+++ b/src/components/MainPage/MainPage.scss
@@ -1,3 +1,8 @@
+@use '../../partials/mixin' as *;
+
+
+
+
 .main {
 }
 
@@ -120,12 +125,18 @@
     &__header{
         text-align: center;
         color: #fff;
-        font-size: 50px;
+        font-size: 40px;
         margin: 0px;
         animation:fadein 1s ;
+
+        @include tablet {
+            font-size: 50px;
+
+        }
         &-span{
             color: rgb(87, 84, 84);
         }
+
     }
     &__headersmall{
         text-align: center;
